[tool.poetry]
name = "rl-algos"
version = "0.1.0"
description = ""
authors = ["alexbuyan <alexbuyan.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
